syntax = "proto3";

import "google/protobuf/timestamp.proto";

package DivitOtoyol.Modules.Locations.Locations.Protos;

// The location service definition.
service LocationService {
  // Gets a location by its ID.
  rpc GetLocationById (LocationByIdRequest) returns (LocationResponse);
}

// The request message containing the location's ID.
message LocationByIdRequest {
  int64 id = 1;
}

// The response message containing the location data.
message LocationResponse {
  int64 id = 1;
  int64 parentId = 2;
  string name = 3;
  google.protobuf.Timestamp created = 4;
}
